--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -50,12 +50,15 @@ Vagrant.configure("2") do |config|
   # backing providers for Vagrant. These expose provider-specific options.
   # Example for VirtualBox:
   #
+  config.vm.box = "generic/rhel9"
   config.vm.provider "virtualbox" do |vb|
     vb.memory = "1024"
     vb.name = "dftd"
     vb.customize ["modifyvm", :id, "--uart1", "0x3F8", "4"]
     vb.customize ["modifyvm", :id, "--uartmode1", "file", File::NULL]
   end
+
+  config.vm.network "private_network", type: "dhcp"
 
   #
   # View the documentation for the provider you are using for more
